$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 1.17-11 (opened April 29, 2011)

	* merged r1603: cca/rda support functions failed with prc() and
	now refuse its results.

	* merged r1602: scores.cca/rda failed if user asked only for
	non-existing type of scores.

	* merged r1600: anova.cccanull checks that seed exists before
	trying to get it.

	* merged r1598: doc of nobs in cca.object.Rd.

	* nobs: copied nobs() methods for vegan from r1596.
	
Version 1.17-10 (released April 27, 2011)

	* merged 1591:R 2.14.0 test warnings in decision-vegan.Rnw.

	* merged r1590: capscale failed in rank-deficit cases with option
	add = TRUE due to changes in cmdsscale() in R 2.13.0, and this
	made BiodiversityR fail the tests.

	* merged r1204, 1206, 1209, 1568: speed-up of examples in Rd
	files. 

	* merged 1555: #include's in vegdist.c.

	* merged 1564: missing definitionin ordering.f.

	* merged 1570: na.rm in metaMDSrotate.

Version 1.17-9 (released March 31, 2011)

	* merged 1551,2: anova.cca(..., by = "axis") failed in partial
	models. 
	
	* merged 1550: ordilabel gained arg 'xpd'.
	
	* merged 1541,8: metaMDSiter got more flexible 'previous.tries. 

	* merged 1538,9, 1542,5: ordisurf gaine new arguments and got a
	new plot method.

	* merged 1534: typo in vegdist.Rd.

	* merged r1533,7, 1544,7: metaMDSrotate works with > 2 dim.

	* merged r1532: fix gettextf in d/r/rarefy.

	* merged r1531,4: ordisurf got formula interface.

	* merged r1527,8: doc updates in CCorA.Rd & ordihull.Rd.

	* merged r1522 thru r1526: implement drarefy; drarefy, rrarefy,
	specnumber, diversity accept vector input.

	* merged r1521: clarify envfit.Rd.
	
	* merged r1499: as.preston, preston default to 'tiesplit = TRUE'.

Version 1.17-8 (released March 2, 2011)

	* merged r1494: no return.

	* merged r1495: procrustes checks input.

	* merged r1496,7: FAQ updates.

	* merged r1501: as.preston 'tiesplit = TRUE' bug.

	* merged r1500,4: decorana zero-eigenvalue fix.
